Updates and grammar check

--- a/Beginner_2/6.1 Built-in Standard Data Types - Variables.ipynb
+++ b/Beginner_2/6.1 Built-in Standard Data Types - Variables.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6.1 VARIABLES\n",
+    "# 6.1 Variables\n",
     "\n",
     "Variables are reserved memory locations to store values.\n",
     "Every variable in Python is an object."
@@ -35,9 +35,9 @@
    "source": [
     "#### Exercise: \n",
     "\n",
-    "(1) Create a variable named '`c`' and assign the value 'Grapes'\n",
+    "(1) Create a variable named <b>'`c`'</b> and assign the value 'Grapes'\n",
     "\n",
-    "(2) Print `c`"
+    "(2) Print <b>`c`</b>"
    ]
   },
   {
@@ -68,18 +68,18 @@
    "source": [
     "## 6.1.1 Identifier Naming Rules\n",
     "\n",
-    "01. Variables names must start with a letter or an underscore, such as:\n",
+    "- (a) Variables names must start with a letter or an underscore, such as:\n",
     "    - variable\n",
     "    - _variable\n",
     "\n",
     "\n",
-    "02. The Remainder of your variable name may consist of letters, numbers, and underscores.\n",
+    "- (b) The remainder of your variable name may consist of letters, numbers, and underscores.\n",
     "    - password\n",
     "    - var1\n",
     "    - first_name\n",
     "\n",
     "\n",
-    "03. Names are case sensitive. The examples below are each, a different variable:\n",
+    "- (c) Names are case sensitive. The examples below are each, a different variable:\n",
     "    - case_sensitive\n",
     "    - CASE_SENSITIVE\n",
     "    - case_Sensitive "
@@ -98,7 +98,7 @@
    "source": [
     "## 6.1.2 Reserved Words\n",
     "\n",
-    "The following identifiers are used as reserved words, or keywords of the language, and <b>cannot</b> be used as ordinary identifiers. They must be spelled exactly as written here:"
+    "The following identifiers are used as reserved words, or keywords of the language, and <b>cannot</b> be used as ordinary identifiers. They must be spelled exactly as written here −"
    ]
   },
   {
@@ -221,6 +221,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 6.1.6 Re-assigning of Variables"
    ]
   },
@@ -273,16 +280,37 @@
     "\n",
     " - Tuple\n",
     "\n",
-    " - Dictionary\n"
+    " - Dictionary\n",
+    " \n",
+    "\n",
+    "### [Mutable vs. Immutable](http://codehabitude.com/2013/12/24/python-objects-mutable-vs-immutable/)\n",
+    "Before having a brief introduction of the data types, let me explain first the difference between <b>mutable</b> and <b>immutable</b>.\n",
+    "\n",
+    "### Mutable\n",
+    "Objects that can be altered or changed. The following are mutable objects −\n",
+    "- list\n",
+    "- dict\n",
+    "- set\n",
+    "- byte array\n",
+    "\n",
+    "### Immutable\n",
+    "Objects that cannot be altered nor changed. The following are immutable objects −\n",
+    "- Numeric types: int, float, complex\n",
+    "- string\n",
+    "- tuple\n",
+    "- frozen set\n",
+    "- bytes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Numbers\n",
+    "### 1. Numbers (immutable)\n",
     "\n",
-    "Number data types store numeric values. Number objects are created when you assign a value to them. For example:"
+    "Number data types store numeric values. Number objects are created when you assign a value to them. \n",
+    "\n",
+    "For example −"
    ]
   },
   {
@@ -341,7 +369,7 @@
     "\n",
     "- Python allows for either pairs of single or double quotes. \n",
     "\n",
-    "For example:"
+    "For example −"
    ]
   },
   {
@@ -360,16 +388,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Subsets of strings can be taken using the slice operator ([ ] and [:] ) with indexes starting at 0 in the beginning of the string and working their way from -1 at the end.\n",
+    "- Subsets of strings can be taken using the slice operator (<b>`[  ]`</b> and <b>`[ : ]`</b>) with indexes starting at 0 in the beginning of the string and working their way from -1 at the end.\n",
     "\n",
-    "For Example:"
+    "For example −"
    ]
   },
   {
@@ -400,7 +421,8 @@
     "\n",
     "my_string = \"I love Python!\"\n",
     "\n",
-    "# Write your code below:"
+    "# Write your code below:\n",
+    "\n"
    ]
   },
   {
@@ -416,7 +438,9 @@
     "collapsed": true
    },
    "source": [
-    "- The plus (+) sign is the string concatenation operator and the asterisk (*) is the repetition operator. For example:"
+    "- The plus ( <b>`+`</b> ) sign is the string concatenation operator and the asterisk ( <b>`*`</b> ) is the repetition operator. \n",
+    "\n",
+    "For example −"
    ]
   },
   {
@@ -447,13 +471,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. List \n",
+    "### 3. List (mutable)\n",
     "\n",
-    "Lists are the most versatile of Python's compound data types. A list contains items separated by commas and enclosed within square brackets ( [ ] ).\n",
+    "Lists are the most versatile of Python's compound data types. A list contains items separated by commas and enclosed within square brackets ( <b>`[ ]`</b> ).\n",
     "\n",
     "To some extent, lists are similar to arrays in C. One difference between them is that all the items belonging to a list can be of different data type.\n",
     "\n",
-    "For example:"
+    "For example −"
    ]
   },
   {
@@ -472,7 +496,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The values stored in a list can be accessed using the slice operator ([ ] and [:]) with indexes starting at 0 in the beginning of the list and working their way to end -1. The plus (+) sign is the list concatenation operator, and the asterisk (*) is the repetition operator. For example:"
+    "The values stored in a list can be accessed using the slice operator (<b>`[  ]`</b> and <b>`[ : ]`</b>) with indexes starting at 0 in the beginning of the list and working their way to end -1. The plus ( <b>`+`</b> ) sign is the list concatenation operator, and the asterisk ( <b>`*`</b> ) is the repetition operator. \n",
+    "\n",
+    "For example −"
    ]
   },
   {
@@ -513,7 +539,9 @@
     "A tuple is another sequence data type that is similar to the list. A tuple consists of a number of values separated by commas. Unlike lists, however, tuples are enclosed within parentheses.\n",
     "\n",
     "\n",
-    "The main differences between lists and tuples are: Lists are enclosed in brackets ( [ ] ) and their elements and size can be changed, while tuples are enclosed in parentheses ( ( ) ) and cannot be updated. Tuples can be thought of as read-only lists. For example −"
+    "The main differences between lists and tuples are: Lists are enclosed in brackets ( <b>`[ ]`</b> ) and their elements and size can be changed, while tuples are enclosed in parentheses ( <b>`( )`</b> ) and cannot be updated. Tuples can be thought of as read-only lists. \n",
+    "\n",
+    "For example −"
    ]
   },
   {
@@ -546,7 +574,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Dictionary"
+    "### 5. Dictionary (mutable)"
    ]
   },
   {
@@ -555,9 +583,9 @@
    "source": [
     "Python's dictionaries are kind of hash table type. They work like associative arrays or hashes found in Perl and consist of key-value pairs. A dictionary key can be almost any Python type, but are usually numbers or strings. Values, on the other hand, can be any arbitrary Python object.\n",
     "\n",
-    "Dictionaries are enclosed by curly braces ({ }) and values can be assigned and accessed using square braces ([]). \n",
+    "Dictionaries are enclosed by curly braces (<b>`{ }`</b>) and values can be assigned and accessed using square braces (<b>`[ ]`</b>). \n",
     "\n",
-    "For example:"
+    "For example −"
    ]
   },
   {
