--- a/Beginner_2/6.2 Built-in Standard Data Types - Booleans.ipynb
+++ b/Beginner_2/6.2 Built-in Standard Data Types - Booleans.ipynb
@@ -4,19 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6.2 Booleans "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# 6.2 Booleans \n",
+    "\n",
     "A boolean is like a light switch. It can only have two values. Just like a light switch can only be on or off, a boolean can only be True or False.\n",
     "\n",
     "In numeric contexts (for example, when used as the argument to an\n",
     "arithmetic operator), they behave like the integers 0 and 1, respectively.\n",
     "\n",
-    "You can use variables to store booleans like this:"
+    "You can use variables to store booleans like this −"
    ]
   },
   {
@@ -42,14 +37,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Booleans and Logical Operators"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Boolean values respond to logical operators <b>and</b> / <b>or</b>. For example:\n",
+    "## 6.2.1 Booleans and Logical Operators\n",
+    "\n",
+    "Boolean values respond to logical operators <b>and</b> / <b>or</b>. For example −\n",
     "\n",
     "True <b>`and`</b> False = False\n",
     "\n",
@@ -66,10 +56,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# You may try the above examples here.\n",
+    "\n",
+    "True and True   "
+   ]
   },
   {
    "cell_type": "markdown",
