--- a/Beginner_2/6.3 Built-in Standard Data Types - Numbers.ipynb
+++ b/Beginner_2/6.3 Built-in Standard Data Types - Numbers.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Number data types store numeric values. They are immutable data types, means that changing the value of a number data type results in a newly allocated object.\n",
     "\n",
-    "Number objects are created when you assign a value to them:"
+    "Number objects are created when you assign a value to them −"
    ]
   },
   {
@@ -27,6 +27,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 6.3.1 Numeric Types"
    ]
   },
@@ -36,7 +43,7 @@
    "source": [
     "#### a. int (signed integers)\n",
     "\n",
-    "They are often called just integers or ints, are positive or negative whole numbers with <b>no</b> decimal point."
+    "They are often called just integers or ints, are positive or negative whole numbers with <b>NO</b> decimal point."
    ]
   },
   {
@@ -83,7 +90,7 @@
     "\n",
     "- This method returns smallest of its arguments.\n",
     "\n",
-    "For example:"
+    "For example −"
    ]
   },
   {
