--- a/Beginner_2/6.5 Built-in Standard Data Types - Lists .ipynb
+++ b/Beginner_2/6.5 Built-in Standard Data Types - Lists .ipynb
@@ -6,14 +6,14 @@
    "source": [
     "# 6.5 List\n",
     "\n",
-    "The list is a most versatile datatype available in Python which can be written as a list of comma-separated values between square brackets ( <b>[ ]</b> ). \n",
+    "List is the most versatile datatype available in Python which can be written as a list of comma-separated values between square brackets ( <b>[ ]</b> ). \n",
     "\n",
     "A list can also be empty: <b>`empty_list = []`</b>.\n",
     "\n",
     "\n",
-    "Important thing about a list is that items in a list <b>need not be of the same type</b>. Lists are Python's ordered mutable data type.\n",
+    "Lists are Python's ordered mutable data type. One important thing about a list is that the items <b>need not be of the same type</b>. \n",
     "\n",
-    "For example: "
+    "For example −"
    ]
   },
   {
@@ -40,7 +40,7 @@
     "\n",
     "Always remember that list indices always start at <b>0</b>.\n",
     "\n",
-    "For example:"
+    "For example −"
    ]
   },
   {
@@ -75,7 +75,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a list index may be used to assign values as well:"
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a list index may be used to assign values as well −"
    ]
   },
   {
@@ -101,7 +108,7 @@
     "## 6.5.2 Methods\n",
     "\n",
     "### len()\n",
-    "Using <b>`len( )`</b> returns the number of top-level items contained in the object being queried. For the example, run the code below:"
+    "Using <b>`len( )`</b> returns the number of top-level items contained in the object being queried. For the example, run the code below −"
    ]
   },
   {
@@ -171,7 +178,7 @@
    "source": [
     "### delete()\n",
     "\n",
-    "To remove a list element, you can use either the <b>`del`</b> statement if you know exactly which element(s) you are deleting or the <b>`remove()`</b> method if you do not know."
+    "To remove a list element, you can use either the <b>`del`</b> statement if you know exactly which element(s) you are deleting or the <b>`remove()`</b> method if you are uncertain."
    ]
   },
   {
@@ -194,7 +201,7 @@
    "source": [
     "### remove() \n",
     "\n",
-    "This method does not return any value but removes the given object from the list. For example:"
+    "This method does not return any value but removes the given object from the list. For example −"
    ]
   },
   {
