--- a/Beginner_2/6.6 Built-in Standard Data Types - Tuples.ipynb
+++ b/Beginner_2/6.6 Built-in Standard Data Types - Tuples.ipynb
@@ -8,9 +8,11 @@
     "\n",
     "A tuple is a sequence of immutable Python objects. Tuples are sequences, just like lists. The differences between tuples and lists are, the tuples cannot be changed unlike lists and tuples use parentheses, whereas lists use square brackets.\n",
     "\n",
-    "Tuple is a Python data type that holds an ordered collection of values, which can be of any type. \n",
+    "Tuple is a Python data type that holds an <b>ordered</b> collection of values, which can be of any type. \n",
     "\n",
-    "Tuples can be expanded into variables easily. In assigning values, you may also ommit the paretheses. See examples below:"
+    "Tuples can be expanded into variables easily. In assigning values, you may also ommit the paretheses. \n",
+    "\n",
+    "See examples below −"
    ]
   },
   {
@@ -30,7 +32,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You may also create an empty tuple:"
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You may create an empty tuple like this −"
    ]
   },
   {
@@ -48,7 +57,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To write a tuple containing a single value you have to include a comma, even though there is only one value "
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To write a tuple containing a single value you have to include a comma, even though there is only one value −"
    ]
   },
   {
@@ -73,9 +89,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.6.1 Accessing values in a tuple\n",
+    "## 6.6.1 Accessing Values in a Tuple\n",
     "\n",
-    "To access values in tuple, use the square brackets for slicing along with the index or indices to obtain value available at that index (This is similar in accessing lists):"
+    "To access values in tuple, use the square brackets for slicing along with the index or indices to obtain value available at that index (This is similar in accessing lists) \n",
+    "\n",
+    "Run the examples below −"
    ]
   },
   {
