--- a/Beginner_2/6.7 Built-in Standard Data Types - Dictionaries.ipynb
+++ b/Beginner_2/6.7 Built-in Standard Data Types - Dictionaries.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "> A few notes about keys and values: * The key must be immutable and hashable while the value can be of any type. Common examples of keys are tuples, strings and numbers. * A single dictionary can contain keys of varying types and values of varying types.\n",
     "\n",
-    "Each key is separated from its value by a colon ( `:` ), the items are separated by commas, and the whole thing is enclosed in curly braces:"
+    "Each key is separated from its value by a colon ( `:` ), the items are separated by commas, and the whole thing is enclosed in curly braces −"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The example above is a dictionary called <b>`my_dictionary`</b> with three key-value pairs:\n",
+    "The example above is a dictionary called <b>`my_dictionary`</b> with three key-value pairs −\n",
     "\n",
     "- <b>`'key1'`</b> points to the value <b>`1`</b>, \n",
     "- <b>`'key2'`</b> points to the value <b>`2`</b>, and\n",
@@ -39,7 +39,7 @@
     "- (b) The <b>values</b> of a dictionary </b>can be of any type</b>;\n",
     "- (c) The <b>keys</b> must be of an <b>immutable data type</b> such as strings, numbers, or tuples. \n",
     "\n",
-    "For example:\n",
+    "For example −\n",
     "\n"
    ]
   },
@@ -64,7 +64,7 @@
    "source": [
     "- (d) No duplicate key is allowed. When duplicate keys encountered during assignment, the last assignment wins.\n",
     "\n",
-    "For example:"
+    "For example −"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An empty dictionary without any items is written with just two curly braces, like this:"
+    "An empty dictionary without any items is written with just two curly braces, like this −"
    ]
   },
   {
@@ -161,7 +161,7 @@
     "\n",
     "Dictionaries are \"mutable\" which means they can be changed after they are created. We can add new key/value pairs to the dictionary. \n",
     "\n",
-    "Here's the syntax:"
+    "Here's the syntax −"
    ]
   },
   {
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here's another example:"
+    "Here's another example −"
    ]
   },
   {
@@ -250,7 +250,7 @@
     "\n",
     "A new value can be associated with a key by assigning a value to the key.\n",
     "\n",
-    "Syntax:"
+    "Syntax −"
    ]
   },
   {
