--- a/Beginner_2/6.4 Built-in Standard Data Types - Strings.ipynb
+++ b/Beginner_2/6.4 Built-in Standard Data Types - Strings.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Strings are amongst the most popular types in Python. We can create them simply by enclosing characters in quotes. Python treats single quotes the same as double quotes.\n",
     "\n",
-    "Creating strings is as simple as assigning a value to a variable:"
+    "Creating strings is as simple as assigning a value to a variable −"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One advantage of using double quotes is that, you don't have to worry about printing with apostrophes:"
+    "One advantage of using double quotes is that, you don't have to worry about printing with apostrophes −"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You may escape the apostrophe (<b> ' </b>) using a backslash (<b> \\ </b>) as seen on the example above. "
+    "You may escape the apostrophe (<b> `'` </b>) using a backslash (<b> `\\` </b>) as seen on the example above. "
    ]
   },
   {
@@ -122,7 +122,7 @@
    "source": [
     "#### Escape Sequences\n",
     "\n",
-    "These are the escape sequences Python supports:\n",
+    "These are the escape sequences Python supports −\n",
     "\n",
     "![Beginner_2](./images/img_escape_characters.png)"
    ]
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here are some examples. Run the code to see the result:"
+    "Here are some examples. Run the code to see the result −"
    ]
   },
   {
@@ -144,8 +144,8 @@
    "source": [
     "# Tab\n",
     "\n",
-    "tabby_cat = \"\\tI'm tabbed in.\"\n",
-    "print(tabby_cat)"
+    "string_tab = \"\\tThis string is tabbed.\"\n",
+    "print(string_tab)"
    ]
   },
   {
@@ -158,8 +158,8 @@
    "source": [
     "# Split\n",
     "\n",
-    "persian_cat = \"I'm split\\non a line.\"\n",
-    "print(persian_cat)"
+    "string_split = \"This will split\\non a line.\"\n",
+    "print(string_split)"
    ]
   },
   {
@@ -171,9 +171,9 @@
    "outputs": [],
    "source": [
     "# Backslash\n",
-    "backslash_cat = \"I'm \\\\ a \\\\ cat.\"\n",
+    "string_backslash = \"This \\\\ is \\\\ a \\\\ backslashed \\\\ string.\"\n",
     "\n",
-    "print(backslash_cat)"
+    "print(string_backslash)"
    ]
   },
   {
@@ -186,14 +186,14 @@
    "source": [
     "# List\n",
     "\n",
-    "fat_cat = \"\"\"\n",
-    "I'll do a list:\n",
-    "\\t* Cat food\n",
-    "\\t* Fishies\n",
-    "\\t* Catnip\\n\\t* Grass\n",
+    "string_list = \"\"\"\n",
+    "My to do list:\n",
+    "\\t* Study Python.\n",
+    "\\t* Be great at Python.\n",
+    "\\t* Conquer the world.\n",
     "\"\"\"\n",
     "\n",
-    "print(fat_cat)"
+    "print(string_list)"
    ]
   },
   {
@@ -202,10 +202,13 @@
    "source": [
     "## 6.4.3 Methods \n",
     "\n",
-    "#### a. `.upper( )` and `.lower( )` \n",
-    "The .upper() and .lower() string methods are self-explanatory. Performing the .upper() method on a string converts all of the characters to uppercase, whereas the lower() method converts all of the characters to lowercase.\n",
+    "Here are a few useful methods for strings −\n",
     "\n",
-    "For example: "
+    "#### a. `.upper( )` and `.lower( )` \n",
+    "- Performing the <b>`.upper()`</b> method on a string converts all of the characters to uppercase;\n",
+    "- Performing the <b>`.lower()`</b> method converts all of the characters to lowercase.\n",
+    "\n",
+    "For example −"
    ]
   },
   {
@@ -254,7 +257,7 @@
     "\n",
     "The <b>`.count()`</b> method adds up the number of times a character or sequence of characters appears in a string.\n",
     "\n",
-    "For example:"
+    "For example −"
    ]
   },
   {
@@ -291,7 +294,7 @@
     "\n",
     "We use <b>`.find()`</b> to search for a specific character/s in a string.\n",
     "\n",
-    "For example:"
+    "For example −"
    ]
   },
   {
@@ -330,20 +333,20 @@
     "\n",
     "The method <b>`replace()`</b> returns a copy of the string in which the occurrences of old have been replaced with new, optionally restricting the number of replacements to max. \n",
     "\n",
-    "##### Syntax:\n",
+    "##### Syntax \n",
     "`str.replace(old, new[, max])`\n",
     "\n",
-    "##### Parameters:\n",
+    "##### Parameters \n",
     "- old -- This is old substring to be replaced.\n",
     "\n",
     "- new -- This is new substring, which would replace old substring.\n",
     "\n",
     "- max -- If this optional argument max is given, only the first count occurrences are replaced.\n",
     "\n",
-    "##### Return Value:\n",
+    "##### Return Value\n",
     "This method returns a copy of the string with all occurrences of substring old replaced by new. If the optional argument max is given, only the first count occurrences are replaced.\n",
     "\n",
-    "For example:"
+    "For example −"
    ]
   },
   {
@@ -354,7 +357,7 @@
    },
    "outputs": [],
    "source": [
-    "str = \"this is string example....wow!!! this is really string\";\n",
+    "str = \"this is string example....wow!!! this is really string\"\n",
     "print(str.replace(\"wow\", \"amazing\"))"
    ]
   },
@@ -369,9 +372,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.4.3 String Formatting \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.4.4 String Formatting \n",
     "\n",
-    "The string format operator is unique to strings and makes up for the pack of having functions from C's printf() family. Following is a simple example −"
+    "The string format operator ( <b>`%`</b> ) is unique to strings and makes up for the pack of having functions from C's `printf()`.\n",
+    "\n",
+    "Simple positional formatting is probably the most common use-case. Use it if the order of your arguments is not likely to change and you only have very few elements you want to concatenate.\n",
+    "\n",
+    "Since the elements are not represented by something as descriptive as a name this simple style should only be used to format a relatively small number of elements.\n",
+    "\n",
+    "For example −"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print((\"I love %s\") %(\"Python\")) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that we used <b>`%s`</b> for string.\n",
+    "\n",
+    "Here's another example −"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "food = \"Pizza\"\n",
+    "price = 50\n",
+    "\n",
+    "print((\"I love %s.\") %(food))\n",
+    "print((\"My food is only %d Pesos\") %(price))\n",
+    "print((\"%s costs %d\") %(food, price))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is the list of complete set of symbols which can be used along with <b>`%`</b> −"
    ]
   },
   {
@@ -379,6 +445,63 @@
    "metadata": {},
    "source": [
     "![Beginner_2](./images/img_string_formatting.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## .format()\n",
+    "\n",
+    "With new style formatting it is possible to give placeholders an explicit positional index.\n",
+    "This allows for re-arranging the order of display without changing the arguments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print('{1} {0}'.format('one','two'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's a comparison of the Old and the new string formatting −"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Old\n",
+    "print('%s %s' % ('one', 'two'))\n",
+    "\n",
+    "#New\n",
+    "print('{} {}'.format('one', 'two'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  "
    ]
   }
  ],
