--- a/Beginner_1/1. Introspection.ipynb
+++ b/Beginner_1/1. Introspection.ipynb
@@ -4,34 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introspection"
+    "# 1. Introspection\n",
+    "> Introspection refers to the ability to examine something to determine what it is, what it knows, and what it is capable of doing. Introspection gives programmers a great deal of flexibility and control.\n",
+    "\n",
+    ">Python's support for introspection runs deep and wide throughout the language. In fact, it would be hard to imagine Python without its introspection features.\n",
+    "\n",
+    "## 1.1 Starting the Python interpreter in interactive mode\n",
+    "Just go to the terminal and type <b>`python`</b> and you will see the Python promt (<b> `>>>` </b>) and the Python version that you are currently using −\n",
+    "\n",
+    "![Beginner_1](./images/img_python_prompt.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [help()](https://docs.python.org/3/library/functions.html#help)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 1.2 [help()](https://docs.python.org/3/library/functions.html#help)\n",
     "### Starting the help Utility\n",
     "\n",
-    "You may type help() without specifying an argument, the interactive help system starts on the interpreter console.\n",
+    "Let's start by asking for help. You may type <b>`help()`</b> without specifying an argument, the interactive help system starts on the interpreter console.\n",
     "\n",
-    "For example:\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "<img src=\"http://localhost:8888/files/Images/img_help.png\">\n"
+    "For example −\n",
+    "![Beginner_1](./images/img_help.png)"
    ]
   },
   {
@@ -47,24 +41,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "<img src=\"http://localhost:8888/files/Images/img_help_keyword.png\">\n"
+    "![Beginner_1](./images/img_help_keyword.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we typed help(), we were greeted with a message and some instructions, followed by the help prompt. At the prompt, we entered keywords and were shown a list of Python keywords. \n",
+    "When we typed <b>`help()`</b>, we were greeted with a message and some instructions, followed by the <b>`help`</b> prompt. At the prompt, we entered keywords and were shown a list of Python keywords. \n",
     "\n",
-    "If we want to quit, just type 'quit', and we will be returned to the Python prompt."
+    "As you can see, Python's online help utility displays information on a variety of topics, or for a particular object. The help utility is quite useful, and does make use of Python's introspection capabilities.\n",
+    "\n",
+    "If we want to quit, just type <b>`'quit'`</b>, and we will be returned to the Python prompt."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to know more about help(), just click [here](http://www.ibm.com/developerworks/library/l-pyint/index.html)."
+    "If you want to know more about <b>`help()`</b>, just click [here](http://www.ibm.com/developerworks/library/l-pyint/index.html)."
    ]
   },
   {
@@ -78,24 +73,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [dir()](https://docs.python.org/3/library/functions.html#dir)"
+    "## 1.3 [dir()](https://docs.python.org/3/library/functions.html#dir)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python provides a way to examine the contents of modules (and other objects) using the built-in dir() function.\n",
+    "Python provides a way to examine the contents of modules (and other objects) using the built-in <b>`dir()`</b> function.\n",
     " \n",
-    "It returns a sorted list of attribute names for any object passed to it. If no object is specified, dir() returns the names in the current scope."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "It returns a sorted list of attribute names for any object passed to it. If no object is specified, <b>`dir()`</b> returns the names in the current scope.\n",
     "\n",
-    "<img src=\"http://localhost:8888/files/Images/img_dir.png\">"
+    "![Beginner_1](./images/img_dir.png)"
    ]
   },
   {
@@ -104,7 +93,7 @@
     "collapsed": true
    },
    "source": [
-    "If you want to know more about dir(), click [here](http://www.ibm.com/developerworks/library/l-pyint/index.html)"
+    "If you want to know more about <b>`dir()`</b>, click [here](http://www.ibm.com/developerworks/library/l-pyint/index.html)"
    ]
   }
  ],
