Updated Syntax contents and numbering

--- a/Beginner_1/2. Syntax.ipynb
+++ b/Beginner_1/2. Syntax.ipynb
@@ -4,21 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Overview Syntax"
+    "# 2. Syntax"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Whitespace"
+    "## 2.1 Whitespace\n",
+    "\n",
+    "In Python, whitespace is used to structure code. Whitespace is important, so you have to be careful with how you use it.\n",
+    "\n",
+    "I'll be showing some examples, but don't worry about the code just yet. I just want you to know the use of whitespaces. We'll tackle more about the codes you'll see below a little later."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Avoid whitespaces in the following situations:\n",
+    "##### Avoid whitespaces in the following situations:\n",
     "\n",
     "- Immediately inside the parentheses, brackets, or braces\n",
     "  \n",
@@ -61,44 +65,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Indentation"
+    "  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Python provides no braces to indicate blocks of code for class and function definitions or flow control.\n",
-    "- Blocks of code are denoted by line indentation.\n",
-    "- Use 4 spaces per indentation level.\n",
+    "## 2.2 Indentation\n",
+    "Python provides no braces to indicate blocks of code for class and function definitions or flow control. Python programs get structured through indentation, i.e. code blocks are defined by their indentation. \n",
     "\n",
-    "Example:"
+    "For example −"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "if True:\n",
-    "    print \"True\"\n",
+    "    print(\"True\")\n",
     "else:\n",
-    "    print \"False\""
+    "    print(\"False\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comments"
+    "<b> Note:</b> Use 4 spaces per indentation level.\n",
+    "\n",
+    "So what would happen if the indentation is incorrect?\n",
+    "Run the code below to find out!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def food():\n",
+    "eggs = 12\n",
+    "return eggs\n",
+    "        \n",
+    "print spam()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>```IndentationError: expected an indented block```</b>\n",
+    "\n",
+    "We will get this error everytime our indentation is off. \n",
+    "\n",
+    "Make sure to indent the codes with four spaces like this −"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def food():\n",
+    "    eggs = 12\n",
+    "    return eggs\n",
+    "        \n",
+    "print(food())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.3 Comments\n",
+    "\n",
+    "Comments in Python are used to explain what the code does. \n",
+    "\n",
+    "### 2.3.1 Single-line comments\n",
+    "Single-line comments begin with the hash character (<b> ```#```</b> ) and are terminated by\n",
+    "the end of line. Python is ignoring all text that comes after the # to the end of the line, \n",
+    "they are not part of the command.  For example − "
    ]
   },
   {
@@ -109,8 +172,30 @@
    },
    "outputs": [],
    "source": [
-    "# This is a single line comment\n",
+    "# This is a single line comment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3.2 Multi-line comments\n",
     "\n",
+    "Comments spanning more than one line are achieved by inserting a multi-line string\n",
+    "(with <b>```\"\"\"```</b> or <b>```'''```</b> as the delimiter one each end) that is not used in assignment or \n",
+    "otherwise evaluated, but sits in between other statements.\n",
+    "\n",
+    "They are meant as documentation for anyone reading the code. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "'''\n",
     "This \n",
     "is \n",
@@ -130,12 +215,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Single-line Statements"
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.4 Single-line Statements\n",
+    "\n",
+    "From the term itself, these are statements within a single line.\n",
+    "\n",
+    "For example −"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -162,28 +258,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Multi-line Statements"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Python allow the use of the line continuation character (\\) to denote that the line should continue.\n",
+    "## 2.5 Multi-line Statements\n",
     "\n",
-    "Example:"
+    "Statements in Python typically end with a new line. Python does, however, allow the use of the line continuation character (\\) to denote that the line should continue. \n",
+    "\n",
+    "For example −"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -199,9 +283,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "Statements contained within the [], {}, or () brackets do not need to use the line continuation character.\n",
+    "Statements contained within the ```[ ]```, ```{ }```, or ```( )``` do not need to use the line continuation character.\n",
     "\n",
-    "Example:"
+    "For example −"
    ]
   },
   {
@@ -222,16 +306,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pep 8"
+    "## 2.6 pep8"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A Style-guide for Python code.\n",
+    "This is a style-guide for Python code.\n",
     "\n",
-    "Please check this [link](https://www.python.org/dev/peps/pep-0008/)\n"
+    "For the pep8 official documentation, please check this [link](https://www.python.org/dev/peps/pep-0008/)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    "
    ]
   }
  ],
